test/visibility/submodule-in-file/errors/DoubleNested.good
DoubleNested.chpl:2: error: Cannot include module from a inline nested module
